# claude-conversations

./: .env.example  .gitignore  .markdownlint.json  CLAUDE.md  README.md  SPEC.md  claude-conversations  pyproject.toml
.claude/skills/c3po/: SKILL.md
api/: __init__.py
cli/: __init__.py  formatter.py  main.py  tui.py
core/: __init__.py  agents.py  chunking.py  parser.py  persistence.py  search.py
skill/: c3po.md
src/claude_conversations/: __init__.py  cli.py  formatter.py  index.py  parser.py
tests/: __init__.py  test_agents.py  test_chunking.py  test_persistence.py  test_rag_analyze.py
