[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-conversations"
version = "0.1.0"
description = "Search, explore, and extract from Claude Code conversation history"
readme = "SPEC.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
claude-conversations = "claude_conversations.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
