[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-conversations"
version = "0.4.1"
description = "Search, explore, and extract from Claude Code conversation history"
readme = "SPEC.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "textual>=0.47",
]

[project.scripts]
claude-conversations = "cli.main:cli"

[tool.setuptools.packages.find]
include = ["core*", "cli*", "api*"]
