[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-conversations"
version = "0.7.3"
description = "Search, explore, and extract from Claude Code conversation history"
readme = "SPEC.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "textual>=0.47",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.scripts]
claude-conversations = "cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["core*", "cli*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
